@@ -50,12 +50,11 @@ class CatalogBrainContentIcon(BaseIcon):
     def description(self):
         context = aq_inner(self.context)
         tt = getToolByName(context, 'portal_types')
-        ttinfo = tt.get(self.brain['portal_type'], None)
-        #Fix problem with non existing portal_type #9401
-        if ttinfo: 
-            return ttinfo.Title()
+        fti = tt.get(self.brain['portal_type'])
+        if fti is not None:
+            return fti.Title()
         else:
-            return None
+            return self.brain['portal_type']
 
     @property
     def title(self):
@@ -83,7 +82,11 @@ class CMFContentIcon(BaseIcon):
     def description(self):
         context = aq_inner(self.context)
         tt = getToolByName(context, 'portal_types')
-        return tt.get(self.obj.portal_type).Title()
+        fti = tt.get(self.obj.portal_type)
+        if fti is not None:
+            return fti.Title()
+        else:
+            return self.obj.portal_type
 
     @property
     def title(self):
